# mcp-unity-webrtc-fix-double-init-panic-issue

./: .gitignore  Cargo.toml  README.md  build.ps1  build.sh  justfile  rust-toolchain.toml  swap.sh
copy-dll/: Cargo.toml
copy-dll/src/: main.rs
format-xml/: Cargo.toml
format-xml/src/: lib.rs
jitsi-jingle-sdp/: Cargo.toml  README.md
jitsi-jingle-sdp/src/: lib.rs
jitsi-jingle-sdp/tests/: offer_answer.rs
jitsi-meet-signalling/: Cargo.toml
jitsi-meet-signalling-c/: Cargo.toml
jitsi-meet-signalling-c/src/: lib.rs
jitsi-meet-signalling/src/: colibri.rs
jitsi-meet-signalling/src/xmpp/: connection.rs
jitsi-meet-unity/Runtime/Scripts/: Jitsi.cs
jitsi-meet-unity/Samples~/BasicSendReceive/: SampleBehaviour.cs  SampleScene.unity
jitsi-xmpp-parsers/: .cargo_vcs_info.json  Cargo.toml
jitsi-xmpp-parsers/src/: jingle_ice_udp.rs
minidom/: Cargo.toml
trace-local/: Cargo.toml
trace-local/src/: main.rs
tracing/tracing-core/src/: dispatcher.rs
unity-mirror/Assets/: BasicSendReceive
unity-mirror/ProjectSettings/: ProjectSettings.asset
